--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -20,7 +20,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install flake8
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        if [ -f build/requirements.txt ]; then pip install -r build/requirements.txt; fi
     - name: Install bapsicle as module
       run: |
         pip install -e .
