--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -16,7 +16,12 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
+    - name: Install Ubuntu dependencies
+      run: |
+        cd build
+        chmod +x install-ubuntu.sh
+        ./install-ubuntu.sh 
+    - name: Install Python dependencies
       run: |
         python -m pip install --upgrade pip
         pip install flake8
