Fix windows installer and add uninstaller.

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,11 @@ build/build-exe-config.json
 install/*.exe
 
 *.pyo
+
+*.spec
+
+build/build-exe-pyinstaller-command.bat
+
+build/build/BAPSicle/
+
+build/output/
