--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,13 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "Python: Launch Player Standalone",
+            "type": "python",
+            "request": "launch",
+            "program": "./player.py",
+            "console": "integratedTerminal"
+        },
+        {
             "name": "Python: Launch Server Standalone",
             "type": "python",
             "request": "launch",
