--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 
-
+.vscode/settings.json
 
 __pycache__/
 
@@ -10,6 +10,7 @@ state/
 build/build-exe-config.json
 
 install/*.exe
+install/nssm
 
 *.pyo
 
@@ -20,3 +21,7 @@ build/build-exe-pyinstaller-command.bat
 build/build/BAPSicle/
 
 build/output/
+
+venv/
+
+config.py
