--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -3,12 +3,12 @@ name: Python package
 on: [push]
 
 jobs:
-  build:
+  build-ubuntu:
 
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.7, 3.8]
+        python-version: [3.7, 3.8, 3.9]
 
     steps:
     - uses: actions/checkout@v2
@@ -20,7 +20,7 @@ jobs:
       run: |
         cd build
         chmod +x install-ubuntu.sh
-        ./install-ubuntu.sh 
+        ./install-ubuntu.sh
     - name: Install Python dependencies
       run: |
         python -m pip install --upgrade pip
