--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -21,6 +21,8 @@ jobs:
         cd build
         chmod +x install-ubuntu.sh
         ./install-ubuntu.sh
+        sudo apt-get install alsa-base
+        sudo apt-get install --reinstall linux-image-extra-`uname -r`
         sudo modprobe snd-dummy # Make a dummy sound output
     - name: Install Python dependencies
       run: |
