--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -21,7 +21,7 @@ jobs:
         cd build
         sudo apt update
         chmod +x install-ubuntu.sh
-        ./install-ubuntu.sh
+        #./install-ubuntu.sh
         # Use pulseaudio for dummy output
         sudo apt-get install pulseaudio jackd2 alsa-utils dbus-x11
     - name: Install Python dependencies
