--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -3,9 +3,9 @@ name: Python package
 on: [push]
 
 jobs:
-  build-ubuntu:
+  build-macos:
 
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     strategy:
       matrix:
         python-version: [3.7, 3.8, 3.9]
@@ -16,19 +16,12 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install Ubuntu dependencies
-      run: |
-        cd build
-        sudo apt update
-        chmod +x install-ubuntu.sh
-        #./install-ubuntu.sh
-        # Use pulseaudio for dummy output
-        sudo apt-get install pulseaudio jackd2 alsa-utils dbus-x11
     - name: Install Python dependencies
       run: |
         python -m pip install --upgrade pip
         pip install flake8
-        if [ -f build/requirements.txt ]; then pip install -r build/requirements.txt; fi
+        pip install -r build/requirements.txt
+        pip install -r build/requirements-macos.txt
     - name: Install bapsicle as module
       run: |
         pip install -e .
