--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -37,6 +37,7 @@ jobs:
         cp config.py.example config.py # We don't need an API config file for these tests.
         python -m unittest
     - name: Archive test logs
+      if: ${{ always() }}
       uses: actions/upload-artifact@v2
       with:
         name: Logs
