--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -35,7 +35,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [3.7]
+        python-version: [3.9]
 
     steps:
     - uses: actions/checkout@v2
@@ -70,12 +70,11 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Build .exe
       run: |
-        build/build-windows.bat
+        build/build-windows.bat no-venv
     - name: Archive Build
       uses: actions/upload-artifact@v2
       with:
         name: Package - Windows
         path: |
           build/output/BAPSicle.exe
-
-
+          install/
