--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,17 +2,10 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Python: Launch Player Standalone",
+            "name": "Python: Launch Server",
             "type": "python",
             "request": "launch",
-            "program": "./player.py",
-            "console": "integratedTerminal"
-        },
-        {
-            "name": "Python: Launch Server Standalone",
-            "type": "python",
-            "request": "launch",
-            "program": "./launch_standalone.py",
+            "program": "./launch.py",
             "console": "integratedTerminal"
         },
         {
