--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "bapsicle",
+  "nice_name": "BAPSicle",
   "version": "0.1.0",
-  "description": "Broadcast Playout System",
+  "description": "BAPS3, the third generation of University Radio York's Broadcast and Presenting Suite. This package includes the Server (BAPSicle) and Presenter (WebStudio)",
   "main": "index.js",
   "directories": {
     "doc": "docs",
@@ -17,7 +18,7 @@
     "type": "git",
     "url": "git+https://github.com/universityradioyork/bapsicle.git"
   },
-  "author": "",
+  "author": "University Radio York",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/universityradioyork/bapsicle/issues"
