--- a/requirements.txt
+++ b/requirements.txt
@@ -6,13 +6,19 @@ certifi==2021.5.30
 cffi==1.14.6
 chardet==4.0.0
 charset-normalizer==2.0.4
+future==0.18.2
 httptools==0.2.0
 idna==3.2
+iso8601==0.1.16
 Jinja2==3.0.1
 MarkupSafe==2.0.1
 multidict==5.1.0
+mutagen==1.45.1
 pycparser==2.20
+pygame==2.0.1
+pyserial==3.5
 pyttsx3==2.90
+PyYAML==5.4.1
 requests==2.26.0
 sanic==21.3.4
 Sanic-Cors==1.0.0
