--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "presenter-make": "npm run presenter-install && (rm -r presenter-build || true) && cd presenter && yarn build-baps && cp -r build ../presenter-build && cd ../ && npm install",
     "test": "echo \"Error: no test specified\" && exit 1",
     "presenter-start": "cd presenter && yarn start",
-    "lint": "autopep8 -r ./*.py -a -a --ignore E402,E226,E24,W50,W690 --max-line-length 127 --in-place"
+    "lint": "autopep8 -r -a -a --ignore E402,E226,E24,W50,W690 --max-line-length 127 --in-place --exclude=\"*node_modules*,*venv/*,presenter/*\" . "
   },
   "repository": {
     "type": "git",
