--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,6 +1,7 @@
 name: Package
 on: [push]
-
+env:
+  version: ${{github.base_ref}}-${{github.sha}}
 jobs:
   build-macos:
 
@@ -25,7 +26,7 @@ jobs:
     - name: Archive Build
       uses: actions/upload-artifact@v2
       with:
-        name: Package - MacOS
+        name: BAPSicle-${{ env.version }}-MacOS
         path: |
           build/output/BAPSicle.zip
 
@@ -51,7 +52,7 @@ jobs:
     - name: Archive Build
       uses: actions/upload-artifact@v2
       with:
-        name: Package - Ubuntu
+        name: BAPSicle-${{ env.version }}-Ubuntu
         path: |
           build/output/BAPSicle
 
@@ -77,7 +78,7 @@ jobs:
     - name: Archive Build
       uses: actions/upload-artifact@v2
       with:
-        name: Package - Windows
+        name: BAPSicle-${{ env.version }}-Windows
         path: |
           build/output/BAPSicle.exe
           install/
