--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,8 +1,8 @@
 name: Package
-on: [push,pull_request]
+on: [pull_request]
 
 env:
-  version: ${{github.head_ref}}${{github.ref}}
+  version: ${{github.head_ref}-${{github.sha}}
 jobs:
   build-macos:
 
