Try getting branch via bash.

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,8 +1,6 @@
 name: Package
-on: [pull_request]
+on: [push]
 
-env:
-  version: ${{github.head_ref}-${{github.sha}}
 jobs:
   build-macos:
 
@@ -24,10 +22,14 @@ jobs:
         npm run presenter-make
         build/build-macos.sh
         zip -r build/output/BAPSicle.zip build/output/BAPSicle.app
+    - name: Extract branch name
+      shell: bash
+      run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
+      id: extract_branch
     - name: Archive Build
       uses: actions/upload-artifact@v2
       with:
-        name: BAPSicle-${{ env.version }}-MacOS
+        name: BAPSicle-${{ steps.extract_branch.outputs.branch }}-${{github.sha}}-MacOS
         path: |
           build/output/BAPSicle.zip
 
@@ -50,10 +52,14 @@ jobs:
       run: |
         npm run presenter-make
         build/build-linux.sh
+    - name: Extract branch name
+      shell: bash
+      run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
+      id: extract_branch
     - name: Archive Build
       uses: actions/upload-artifact@v2
       with:
-        name: BAPSicle-${{ env.version }}-Ubuntu
+        name: BAPSicle-${{ steps.extract_branch.outputs.branch }}-${{github.sha}}-Ubuntu
         path: |
           build/output/BAPSicle
 
@@ -76,10 +82,14 @@ jobs:
       run: |
         npm run presenter-make
         build/build-windows.bat no-venv
+    - name: Extract branch name
+      shell: bash
+      run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
+      id: extract_branch
     - name: Archive Build
       uses: actions/upload-artifact@v2
       with:
-        name: BAPSicle-${{ env.version }}-Windows
+        name: BAPSicle-${{ steps.extract_branch.outputs.branch }}-${{github.sha}}-Windows
         path: |
           build/output/BAPSicle.exe
           install/
