--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -9,8 +9,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ['3.9']
-        node-version: ['14']
+        python-version: ['3.9', '3.11']
+        node-version: ['20']
 
     steps:
     - uses: actions/checkout@v2
@@ -46,8 +46,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ['3.8','3.9']
-        node-version: ['14']
+        python-version: ['3.8','3.9', '3.11']
+        node-version: ['20']
 
     steps:
     - uses: actions/checkout@v2
@@ -82,8 +82,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ['3.9']
-        node-version: ['14']
+        python-version: ['3.9', '3.11']
+        node-version: ['20']
 
     steps:
     - uses: actions/checkout@v2
